[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhenglin"
version = "3.0.0"
# version = "main_function.networks_numbers.modification_numbers"
authors = [
  { name="Zhenglin", email="aidenhpan@gmail.com" },
]
description = "A deep-learning package contains a set of well-organized deep-neural networks&tools."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZhenglinPan/zhenglin-package"
"Bug Tracker" = "https://github.com/ZhenglinPan/zhenglin-package/issues"


# python -m build
# <remove old dists>
# git add -A && git commit -m "Your Message"
# py -m twine upload --repository pypi dist/*
# user name: __token__
# password: <API token>